Project hr_management_system {
  database_type: 'PostgreSQL'
  Note: 'HR Management System - core domain schema. Spatie permission tables and activity_log are simplified.'
}

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  password varchar
  status varchar [note: 'active / inactive']
  remember_token varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  Note: 'Login account. Not every user has an employees row (e.g. admin/ceo without a profile).'
}

Table departments {
  id bigint [pk, increment]
  name varchar [unique]
  status varchar [note: 'active / inactive']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table positions {
  id bigint [pk, increment]
  department_id bigint [ref: > departments.id]
  name varchar
  status varchar [note: 'active / inactive']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table employees {
  id bigint [pk, increment]
  user_id bigint [unique, ref: - users.id]
  employee_id varchar [unique, note: 'e.g. EMP-00001']
  full_name varchar
  gender varchar
  date_of_birth date
  phone_number varchar
  address text
  department_id bigint [ref: > departments.id]
  position_id bigint [ref: > positions.id]
  join_date date
  last_working_date date
  base_salary decimal(15,2)
  employment_status varchar
  emergency_contact varchar
  profile_photo varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table company_settings {
  id bigint [pk, increment]
  company_name varchar
  company_logo varchar
  company_address text
  company_phone varchar
  company_email varchar
  office_latitude decimal(10,7)
  office_longitude decimal(10,7)
  allowed_radius_meters integer
  working_start_time time
  working_end_time time
  working_days json
  salary_currency varchar
  payroll_day_rate_divisor integer
  created_at timestamp
  updated_at timestamp

  Note: 'Single-row settings table.'
}

Table public_holidays {
  id bigint [pk, increment]
  holiday_date date [unique]
  name varchar
  description text
  status varchar [note: 'active / inactive']
  created_at timestamp
  updated_at timestamp
}

Table attendances {
  id bigint [pk, increment]
  employee_id bigint [ref: > employees.id]
  attendance_date date
  clock_in_time datetime
  clock_out_time datetime
  clock_in_latitude decimal(10,7)
  clock_in_longitude decimal(10,7)
  clock_out_latitude decimal(10,7)
  clock_out_longitude decimal(10,7)
  status varchar [note: 'present / late / absent / on_leave']
  is_late boolean
  correction_reason text
  corrected_by bigint [ref: > users.id]
  corrected_at datetime
  proxied_clock_in_by bigint [ref: > users.id]
  proxied_clock_out_by bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table leave_requests {
  id bigint [pk, increment]
  employee_id bigint [ref: > employees.id]
  leave_type varchar
  start_date date
  end_date date
  duration_type varchar [note: 'full_day / half_day']
  total_days decimal(5,2)
  reason text
  status varchar [note: 'pending / approved / rejected / cancelled']
  hr_approval_status varchar
  hr_approved_by bigint [ref: > users.id]
  hr_approved_at datetime
  ceo_approval_status varchar
  ceo_approved_by bigint [ref: > users.id]
  ceo_approved_at datetime
  rejection_reason text
  cancelled_at datetime
  created_at timestamp
  updated_at timestamp
}

Table payroll_batches {
  id bigint [pk, increment]
  month integer
  year integer
  status varchar [note: 'draft / pending_approval / approved / rejected']
  generated_by bigint [ref: > users.id]
  generated_at datetime
  submitted_by bigint [ref: > users.id]
  submitted_at datetime
  approved_by bigint [ref: > users.id]
  approved_at datetime
  rejected_by bigint [ref: > users.id]
  rejected_at datetime
  rejection_reason text
  created_at timestamp
  updated_at timestamp

  indexes {
    (month, year) [unique]
  }
}

Table payroll_items {
  id bigint [pk, increment]
  payroll_batch_id bigint [ref: > payroll_batches.id]
  employee_id bigint [ref: > employees.id]
  base_salary decimal(15,2)
  daily_rate decimal(15,2)
  working_days integer
  present_days integer
  absent_days integer
  unpaid_leave_days integer
  maternity_leave_days integer
  gross_salary decimal(15,2)
  unpaid_leave_deduction decimal(15,2)
  absence_deduction decimal(15,2)
  maternity_deduction decimal(15,2)
  taxable_salary decimal(15,2)
  tax_rate decimal(5,2)
  tax_amount decimal(15,2)
  nssf_deduction decimal(15,2)
  tax_breakdown json
  net_salary decimal(15,2)
  status varchar [note: 'draft / locked']
  created_at timestamp
  updated_at timestamp
}

Table announcement_categories {
  id bigint [pk, increment]
  name varchar [unique]
  description text
  status varchar [note: 'active / inactive']
  created_at timestamp
  updated_at timestamp
}

Table announcements {
  id bigint [pk, increment]
  category_id bigint [ref: > announcement_categories.id]
  title varchar
  content text
  priority varchar [note: 'normal / important / urgent']
  status varchar [note: 'draft / pending_approval / rejected / published / archived']
  attachment_path varchar
  attachment_name varchar
  attachment_size integer
  created_by bigint [ref: > users.id]
  submitted_by bigint [ref: > users.id]
  submitted_at datetime
  approved_by bigint [ref: > users.id]
  approved_at datetime
  rejected_by bigint [ref: > users.id]
  rejected_at datetime
  rejection_reason text
  created_at timestamp
  updated_at timestamp
}

Table announcement_targets {
  id bigint [pk, increment]
  announcement_id bigint [ref: > announcements.id]
  target_type varchar [note: 'all / role / department / employee']
  target_id bigint [note: 'polymorphic, meaning depends on target_type']
  created_at timestamp
  updated_at timestamp
}

Table announcement_views {
  id bigint [pk, increment]
  announcement_id bigint [ref: > announcements.id]
  employee_id bigint [ref: > employees.id]
  viewed_at datetime
  created_at timestamp
  updated_at timestamp

  indexes {
    (announcement_id, employee_id) [unique]
  }
}

Table recruitment_vacancies {
  id bigint [pk, increment]
  title varchar
  department_id bigint [ref: > departments.id]
  description text
  required_headcount integer
  filled_headcount integer
  target_hiring_date date
  status varchar [note: 'open / closed']
  created_by bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table recruitment_candidates {
  id bigint [pk, increment]
  vacancy_id bigint [ref: > recruitment_vacancies.id]
  full_name varchar
  phone varchar
  email varchar
  source varchar [note: 'facebook / telegram / linkedin / referral / walk_in / email / other']
  cv_path varchar
  cv_name varchar
  cv_size integer
  status varchar [note: 'pipeline status, see RECRUITMENT_API.md']
  interview_date date
  interviewer_id bigint [ref: > employees.id]
  notes text
  outcome_reason text
  created_by bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

// --- Spatie laravel-permission tables (simplified) ---

Table roles {
  id bigint [pk, increment]
  name varchar
  guard_name varchar
}

Table permissions {
  id bigint [pk, increment]
  name varchar
  guard_name varchar
}

Table model_has_roles {
  role_id bigint [ref: > roles.id]
  model_type varchar
  model_id bigint [ref: > users.id, note: 'polymorphic, model_type = App\\Models\\User']
}

Table model_has_permissions {
  permission_id bigint [ref: > permissions.id]
  model_type varchar
  model_id bigint [ref: > users.id, note: 'polymorphic, model_type = App\\Models\\User']
}

Table role_has_permissions {
  permission_id bigint [ref: > permissions.id]
  role_id bigint [ref: > roles.id]
}

// --- Spatie activitylog table (simplified) ---

Table activity_log {
  id bigint [pk, increment]
  log_name varchar
  description text
  subject_type varchar
  subject_id bigint
  causer_type varchar
  causer_id bigint [ref: > users.id, note: 'polymorphic, causer_type = App\\Models\\User']
  properties json
  event varchar
  batch_uuid varchar
  created_at timestamp
  updated_at timestamp
}

TableGroup auth_roles_audit {
  users
  roles
  permissions
  model_has_roles
  model_has_permissions
  role_has_permissions
  activity_log
}

TableGroup org_structure {
  departments
  positions
  employees
}

TableGroup settings {
  company_settings
  public_holidays
}

TableGroup attendance_leave {
  attendances
  leave_requests
}

TableGroup payroll {
  payroll_batches
  payroll_items
}

TableGroup announcements_group {
  announcement_categories
  announcements
  announcement_targets
  announcement_views
}

TableGroup recruitment {
  recruitment_vacancies
  recruitment_candidates
}
